@@ -1,3 +1,8 @@
+2007-08-16  Matthew Barnes  <mbarnes@redhat.com>
+
+	* addressbook/e-book-backend-gal.c (load_source):
+	Fix compilation errors caused by glibc's new "open" macro (#466987).
+
 2007-08-16  Sankar P  <psankar@novell.com>
 
 	reviewed by: Srinivasa Ragavan <sragavan@novell.com>
